# QuestScreen.gd
# ä»»å‹™æŸ¥çœ‹ç•Œé¢
extends Control

# ==================== ç¯€é»å¼•ç”¨ ====================
@onready var back_button = $VBoxContainer/TopBar/HBoxContainer/BackButton
@onready var quest_list_container = $VBoxContainer/ScrollContainer/MarginContainer/QuestListContainer

# ==================== åˆå§‹åŒ– ====================
func _ready():
	back_button.pressed.connect(_on_back_pressed)
	# å»¶è¿Ÿè°ƒç”¨ update_quest_listï¼Œç¡®ä¿æ‰€æœ‰èŠ‚ç‚¹éƒ½å·²åˆå§‹åŒ–
	call_deferred("update_quest_list")

# ==================== æ›´æ–°ä»»å‹™åˆ—è¡¨ ====================
func update_quest_list():
	"""æ›´æ–°ä»»å‹™åˆ—è¡¨"""
	# æ£€æŸ¥èŠ‚ç‚¹æ˜¯å¦å­˜åœ¨
	if quest_list_container == null:
		push_error("âŒ quest_list_container èŠ‚ç‚¹ä¸å­˜åœ¨ï¼")
		return

	# æ¸…ç©ºç¾æœ‰åˆ—è¡¨
	for child in quest_list_container.get_children():
		child.queue_free()

	# ç²å–æ´»å‹•ä»»å‹™
	var active_quests = TaskManager.active_quests
	var completed_quests = TaskManager.completed_quests

	# é¡¯ç¤ºæ´»å‹•ä»»å‹™
	if active_quests.size() > 0:
		var active_label = Label.new()
		active_label.text = "é€²è¡Œä¸­çš„ä»»å‹™"
		active_label.add_theme_font_size_override("font_size", 24)
		active_label.add_theme_color_override("font_color", Color(1, 0.8, 0, 1))
		quest_list_container.add_child(active_label)

		for quest_id in active_quests.keys():
			var quest_runtime = active_quests[quest_id]
			var quest_config = quest_runtime["quest_config"]
			create_quest_item(quest_config, quest_runtime, true)
	else:
		var no_quest_label = Label.new()
		no_quest_label.text = "ç›®å‰æ²’æœ‰é€²è¡Œä¸­çš„ä»»å‹™"
		no_quest_label.add_theme_font_size_override("font_size", 20)
		no_quest_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7, 1))
		quest_list_container.add_child(no_quest_label)

	# æ·»åŠ åˆ†éš”ç·š
	var separator = HSeparator.new()
	separator.custom_minimum_size = Vector2(0, 20)
	quest_list_container.add_child(separator)

	# é¡¯ç¤ºå·²å®Œæˆä»»å‹™
	var completed_label = Label.new()
	completed_label.text = "å·²å®Œæˆçš„ä»»å‹™ (%d)" % completed_quests.size()
	completed_label.add_theme_font_size_override("font_size", 24)
	completed_label.add_theme_color_override("font_color", Color(0.5, 1, 0.5, 1))
	quest_list_container.add_child(completed_label)

	if completed_quests.size() > 0:
		for quest_id in completed_quests:
			var quest_config = TaskManager.get_quest_config(quest_id)
			if not quest_config.is_empty():
				create_quest_item(quest_config, {}, false)

func create_quest_item(quest_config: Dictionary, quest_runtime: Dictionary, is_active: bool):
	"""å‰µå»ºä»»å‹™é …ç›®"""
	var quest_panel = PanelContainer.new()
	quest_panel.custom_minimum_size = Vector2(0, 120)

	var margin = MarginContainer.new()
	margin.add_theme_constant_override("margin_left", 10)
	margin.add_theme_constant_override("margin_top", 10)
	margin.add_theme_constant_override("margin_right", 10)
	margin.add_theme_constant_override("margin_bottom", 10)
	quest_panel.add_child(margin)

	var vbox = VBoxContainer.new()
	margin.add_child(vbox)

	# ä»»å‹™åç¨±
	var name_label = Label.new()
	var quest_name = quest_config.get("quest_name", "æœªå‘½åä»»å‹™")
	name_label.text = "ğŸ“‹ %s" % quest_name
	name_label.add_theme_font_size_override("font_size", 22)
	if is_active:
		name_label.add_theme_color_override("font_color", Color(1, 1, 0, 1))
	else:
		name_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7, 1))
	vbox.add_child(name_label)

	# ä»»å‹™æè¿°
	var desc_label = Label.new()
	desc_label.text = quest_config.get("quest_desc", "")
	desc_label.add_theme_font_size_override("font_size", 18)
	desc_label.autowrap_mode = TextServer.AUTOWRAP_WORD
	vbox.add_child(desc_label)

	# é€²åº¦æ¢ï¼ˆåƒ…æ´»å‹•ä»»å‹™ï¼‰
	if is_active:
		var progress_hbox = HBoxContainer.new()
		vbox.add_child(progress_hbox)

		var current_step = quest_runtime.get("current_step_index", 0)
		var total_steps = quest_config.get("steps", []).size()

		var progress_label = Label.new()
		progress_label.text = "é€²åº¦: %d / %d" % [current_step, total_steps]
		progress_label.add_theme_font_size_override("font_size", 16)
		progress_hbox.add_child(progress_label)

		# ç•¶å‰æ­¥é©Ÿæç¤º
		if current_step < total_steps:
			var steps = quest_config.get("steps", [])
			if current_step < steps.size():
				var current_step_data = steps[current_step]
				var step_desc = current_step_data.get("step_desc", "")
				if step_desc != "":
					var step_label = Label.new()
					step_label.text = "â†’ %s" % step_desc
					step_label.add_theme_font_size_override("font_size", 16)
					step_label.add_theme_color_override("font_color", Color(0.8, 0.8, 1, 1))
					vbox.add_child(step_label)

	quest_list_container.add_child(quest_panel)

# ==================== è¼¸å…¥è™•ç† ====================
func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		_on_back_pressed()

# ==================== æŒ‰éˆ•å›èª¿ ====================
func _on_back_pressed():
	"""è¿”å›ä¸»é¸å–®"""
	print("ğŸ”™ è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()
